--- a/package.json
+++ b/package.json
@@ -28,7 +28,8 @@
     "@types/react": "^18.2.43",
     "autoprefixer": "^10.4.16",
     "postcss": "^8.4.31",
-    "tailwindcss": "^3.3.5"
+    "tailwindcss": "^3.3.5",
+    "typescript": "^4.5.5"
   },
   "scripts": {
     "start": "react-scripts start",
